--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The net"
     />
+    <meta charset="utf-8" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!--
